src/test/ui/compile-fail-migration/wf-enum-fields-struct-variant.stderr
error[E0277]: the trait bound `A: std::marker::Copy` is not satisfied
  --> $DIR/wf-enum-fields-struct-variant.rs:23:9
   |
LL |         f: IsCopy<A> //~ ERROR E0277
   |         ^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `A`
   |
   = help: consider adding a `where A: std::marker::Copy` bound
note: required by `IsCopy`
  --> $DIR/wf-enum-fields-struct-variant.rs:17:1
   |
LL | struct IsCopy<T:Copy> {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
